# ceres_solver_rust

./: Cargo.toml  README.md  build.rs
include/: ceres_example.h
src/: ceres_example.cc  jet.rs  main.rs  trajectory.rs
