[package]
name = "ceres_cxx"
version = "0.1.0"
authors = ["Lucas Walter <wsacul@gmail.com>"]
edition = "2018"

# [profile-dev]
# opt-level = 3

[dependencies]
cxx = "1.0"
nalgebra = "0.24.1"
num = "0.3"
# simba          = { version = "0.3", default-features = false }
simba = "0.3"

[build-dependencies]
cxx-build = "1.0"
pkg-config = "0.3.19"
